# pythonisms

./: decorator.py  linked_list.py  pyproject.toml  test_linked_list.py
